--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
 		</aside>
 	</main>
 	<footer>
-		<p>&copy; Malin Zehirov, 04/04/2023</p>
+		<p>&copy; Malin Zehirov, 2023</p>
 	</footer>
 </body>
 </html>
