--- a/speakers/sampson.html
+++ b/speakers/sampson.html
@@ -14,6 +14,22 @@
 		<h2>San Joaquin Valley Town Hall</h2>
 		<h3>Celebrating our <span class="shadow">75<sup>th</sup></span> Year</h3>
 	</header>
+	<nav id="nav_menu">
+		<ul>
+			<li><a href="../index.html">Home</a></li>
+			<li><a href="speakers.html" class="current">Speakers</a></li>
+			<li><a href="luncheons.html">Luncheons</a></li>
+			<li><a href="tickets.html">Tickets</a></li>
+			<li><a href="aboutus.html"> About Us</a>
+				<ul>
+					<li><a href="#">Our History</a></li>
+					<li><a href="#">Board of Directors</a></li>
+					<li><a href="#">Past Speakers</a></li>
+					<li><a href="#">Contact Information</a></li>
+				</ul>
+			</li>
+		</ul>
+	</nav>
 	<main>
 		<section>
 			<h1>Fossil Threads in the Web of Life</h1>
@@ -58,7 +74,7 @@
 		</aside>
 	</main>
 	<footer>
-		<p>&copy; Malin Zehirov, 03/28/2023</p>
+		<p>&copy; Malin Zehirov, 2023</p>
 	</footer>
 </body>
 </html>
